Add border radius to images in abuse list hero

--- a/src/pages/AbuserList/abuserList.scss
+++ b/src/pages/AbuserList/abuserList.scss
@@ -1,5 +1,10 @@
 @use "../../styles/variables" as *;
 
+.abuse-list-hero {
+    img {
+        border-radius: $border-radius;
+    }
+}
 
 .black {
     background-color: $black;
