--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -17,8 +17,7 @@
     justify-content: center;
     align-items: center;
     gap: 16px;
-    padding: 100px 0px;
-    width: 100%;
+    padding: 100px 64px;
     height: auto;
 
     .name {
@@ -157,6 +156,9 @@
   .contact {
     padding: 32px;
   }
+  .hero-details {
+    padding: 100px 32px;
+  }
 
   .my-skills-body {
     flex-wrap: wrap;
@@ -225,6 +227,9 @@
 @media (max-width: 450px) {
   .skills-section {
     padding: 32px 16px;
+  }
+  .hero-details {
+    padding: 100px 16px;
   }
 
   .my-skills-body {
