fixing hover cursor: pointer

--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -81,6 +81,16 @@
         color: $white;
       }
     }
+    &:hover {
+      cursor: pointer;
+      
+      a {
+        color: $primary-super-light;
+      }
+      span {
+        color: $primary-super-light;
+      }
+    }
   }
 
   
