font size and weight fix for mobile.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -324,9 +324,13 @@ img.pic {
   .section-list {
     padding: 32px;
   }
+  body {
+    font-weight: 400;
+  }
 }
 
 @media (max-width: 650px) {
+
   .case-study {
     flex-flow: column nowrap;
     align-items: center;
